--- a/serverless.yml
+++ b/serverless.yml
@@ -13,7 +13,7 @@ provider:
         - "arn:aws:dynamodb:us-east-1:968005369378:table/chatgpt-slack-bot-context"
 
 functions:
-  chatgpt:
+  mention:
     handler: handler.lambda_handler
     layers:
       - arn:aws:lambda:us-east-1:968005369378:layer:chatgpt-slack-layer:1
