--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 DYNAMODB_TABLE_NAME="chatgpt-slack-bot-context"
 
-CHATGPT_ACCESS_TOKEN=""
+CHATGPT_ACCESS_TOKEN="xxxx"
 
-SLACK_APP_TOKEN=xxxx
-SLACK_BOT_TOKEN=xxxx
-SLACK_SIGNING_SECRET=xxxx
+SLACK_APP_TOKEN="xxxx"
+SLACK_BOT_TOKEN="xxxx"
+SLACK_SIGNING_SECRET="xxxx"
