save credentials to aws ssm

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
+AWS_REGION="us-east-1"
+
 DYNAMODB_TABLE_NAME="chatgpt-slack-bot-context"
 
-CHATGPT_ACCESS_TOKEN="xxxx"
+SLACK_BOT_TOKEN_KEY="/chatgpt/slack/bot/token"
+SLACK_SIGNING_SECRET_KEY="/chatgpt/slack/signing/secret"
 
-SLACK_APP_TOKEN="xxxx"
-SLACK_BOT_TOKEN="xxxx"
-SLACK_SIGNING_SECRET="xxxx"
+CHATGPT_ACCESS_TOKEN_KEY="/chatgpt/access/token"
