--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,6 @@
-AWS_REGION="us-east-1"
-
 DYNAMODB_TABLE_NAME="chatgpt-slack-bot-context"
 
-SLACK_BOT_TOKEN_KEY="/chatgpt/slack/bot/token"
-SLACK_SIGNING_SECRET_KEY="/chatgpt/slack/signing/secret"
+SLACK_BOT_TOKEN="xoxb-xxxx"
+SLACK_SIGNING_SECRET="xxxx"
 
-CHATGPT_ACCESS_TOKEN_KEY="/chatgpt/access/token"
+CHATGPT_ACCESS_TOKEN="xxxx"
