--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -14,8 +14,29 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Setup Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
       - name: Install dependencies
         run: npm install
+
+      - name: Install Python dependencies
+        run: npx serverless plugin install --name serverless-python-requirements
+
+      - name: Install dotenv plugin
+        run: npx serverless plugin install --name serverless-dotenv-plugin
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+
+      - name: Set up environment variables
+        run: |
+          echo "SLACK_BOT_TOKEN=${SLACK_BOT_TOKEN}" >> .env
+          echo "SLACK_SIGNING_SECRET=${SLACK_SIGNING_SECRET}" >> .env
+          echo "CHATGPT_ACCESS_TOKEN=${CHATGPT_ACCESS_TOKEN}" >> .env
+          echo "BOT_CURSOR=${BOT_CURSOR}" >> .env
 
       - name: Deploy to AWS
         env:
